# CmakeHowTo

./: CMakeLists.txt  README.md
Components/FunctionLibb/: CMakeLists.txt  Functions.cpp  Functions.h
Components/FunctionLibb/test/: test_ValidateLibraryFunctions.cpp
Components/YamlLibb/: CMakeLists.txt  Yaml.cpp  Yaml.h
Components/app/: CMakeLists.txt  main.cpp
